# dynamics-api-v3

./: .env.example  Pipfile  README.md  pyproject.toml  requirements.txt  settings.py.example  setup.py  sonar-project.properties
docker/: docker-compose.yml
docker/dynamics-api-v3/: Dockerfile
dynamics_apis/: settings.py  urls.py
dynamics_apis/authentication/: __init__.py  authentication.py  middlewares.py  openapi.py  serializers.py  services.py  urls.py  views.py
dynamics_apis/authorization/: apps.py  models.py  serializers.py  services.py  urls.py  viewsets.py
dynamics_apis/bim/: serializers.py
dynamics_apis/common/: apps.py  authentication.py  decorators.py  helpers.py  middlewares.py  models.py  permissions.py  serializers.py  services.py  tests.py  viewsets.py
dynamics_apis/controls/: models.py  serializers.py  services.py  urls.py  viewsets.py
dynamics_apis/defects/: models.py  serializers.py  services.py  urls.py  viewsets.py
dynamics_apis/documents/: models.py  serializers.py  services.py  urls.py  viewsets.py
dynamics_apis/documents/serializers/: approvals.py  documents.py  folders.py
dynamics_apis/documents/viewsets/: approvals.py  documents.py  folders.py
dynamics_apis/graphql/: schema.py  urls.py
dynamics_apis/graphql/serializers/: projects.py
dynamics_apis/projects/: apps.py  models.py  serializers.py  services.py  urls.py  views.py  viewsets.py
dynamics_apis/users/: apps.py  models.py  serializers.py  services.py  tests.py  urls.py  viewsets.py
dynamics_apis/users/models/: contacts.py  groups.py  (+1 more)
test/: settings.py  urls.py
(+9 files in other folders)
