[tool.poetry]
name = "dynamics-api-v2"
version = "0.1.0"
description = ""
authors = ["fmeurou <frederic.meurou@kairnialgroup.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
django-extensions = "^3.1.5"
djangorestframework = "^3.12.4"
Markdown = "^3.3.6"
django-filter = "^21.1"
drf-spectacular = "^0.21.0"
django-oauth-toolkit = "^1.5.0"
drf-jwt = "^1.19.1"
python-jose = "^3.3.0"
python-dotenv = "^0.19.2"
ariadne = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
